@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.723 2011-07-11 19:06:50 fyurisich Exp $
+ * $Id: ChangeLog,v 1.724 2011-07-12 02:15:50 fyurisich Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
@@ -7,6 +7,12 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+
+2011-07-11 23:15:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
+  * source/c_image.c
+    ! Fixed ICON images allways loaded as 32x32, now they are loaded
+      with their real size.
+    ! Fixed ICON images not being show in menu items.
 
 2011-07-11 16:06:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_status.prg
